# Zbot

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  RELEASE_GUIDE.md  app_entry.py  pyproject.toml
.agent/rules/: basic.md
backend/: BACKEND_GUIDE.md  RLS_GUIDE.md  pyproject.toml  run_server.py  zbot_server.spec
backend/app/: config.py  main.py
backend/app/auth/: deps.py  service.py
backend/app/core/: alert.py  cache.py  config_manager.py  jobs.py  loader.py  logger.py  lookup.py  registry.py  task_logger.py
backend/app/db/: client.py  gsheet.py  schema.sql
backend/app/middleware/: idle_tracker.py  rls_context.py
backend/app/routers/: auth.py  cache.py  config.py  frontend_error.py  report.py  sheets.py  stats.py  system.py  tasks.py  templates.py
backend/app/tasks/: base.py  dashboard_bed.py  note_ivi.py  note_surgery.py  stats_fee.py  stats_op.py
backend/app/tasks/opnote/: __init__.py  builder.py  config.py  models.py  record_cache.py  shared.py
backend/vghsdk/: core.py  helpers.py  utils.py
backend/vghsdk/modules/: consent.py  doctor.py  ivi.py  patient.py  surgery.py
frontend/: FRONTEND_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  tasks.ts
frontend/src/components/: BackgroundTasksIndicator.tsx  CacheCheckDialog.tsx  ErrorBoundary.tsx  IdleWarningModal.tsx  Sidebar.tsx  StepIndicator.tsx  TrustBadge.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CodeMirrorEditor.tsx  Input.tsx  JsonEditor.tsx  (+3 more)
frontend/src/constants/: taskNames.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDebounce.ts  useIdleTimer.ts  useTaskPolling.ts  useTaskStats.ts
frontend/src/mocks/: iviMocks.ts  surgeryMocks.ts
frontend/src/pages/: BugReportPage.tsx  ConfigSetupPage.tsx  DashboardBedPage.tsx  IviPage.tsx  LoginPage.tsx  PlaceholderPage.tsx  PricingPage.tsx  SheetsSettingsPage.tsx  StatsFeePage.tsx  StatsOpPage.tsx  SurgeryPage.tsx  TaskStatsPage.tsx  TemplatesSettingsPage.tsx  _TemplatePage.tsx
frontend/src/services/: errorTracking.ts
frontend/src/styles/: theme.ts
scripts/: build_release.py
zbot_launcher/: LAUNCHER_GUIDE.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  ui_taskdialog.py  updater.py  zbot.spec
