[project]
name = "backend"
version = "0.1.0"
description = "Zbot Backend - VGH EIP Automation Platform"
readme = "BACKEND_GUIDE.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    # HTTP Client
    "httpx>=0.23.0",
    # Data Validation & Settings
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Database
    "supabase>=2.0.0",
    # Data Processing
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Google Sheets
    "pygsheets>=2.0.6",
    # Email
    "aiosmtplib>=4.0.2",
    # Process Management
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "vghsdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: 需要真實 EIP 帳號的整合測試",
]
