# Zbot Launcher
# Lightweight updater that downloads and runs Zbot_Main

[project]
name = "zbot-launcher"
version = "2.0.0"
description = "Zbot Launcher + Systray - Auto-updater and server manager for Zbot"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.23.0",
    "packaging>=21.0",
    "infi-systray>=0.1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
